--- a/source/RayTracer.vcxproj.filters
+++ b/source/RayTracer.vcxproj.filters
@@ -53,6 +53,7 @@
     <ClInclude Include="DataTypes.h">
       <Filter>Misc</Filter>
     </ClInclude>
+    <ClInclude Include="Macros.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
@@ -74,6 +75,9 @@
     </ClCompile>
     <ClCompile Include="Camera.cpp">
       <Filter>Misc</Filter>
+    </ClCompile>
+    <ClCompile Include="MathHelpers.cpp">
+      <Filter>Math</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
